--- a/Personal Webpage/About.html
+++ b/Personal Webpage/About.html
@@ -18,12 +18,11 @@
                 </ul>
             </div>
         </div>
-        <div class="title">
-            <h1>Adrian Meda Sanchez</h1>
+        <div class="titleA">
+            <h2>About Me</h2>
+            <p>Hi, I’m Adrian, a 24-year-old tech enthusiast who loves gaming and trying new foods. Whether I’m diving into the latest game, exploring innovative gadgets, or discovering new restaurants, I’m all about embracing new experiences. I enjoy cozy nights in just as much as outdoor adventures and am always eager to connect with others who share my interests!
+            </p>
         </div>
     </div>
-    </body>
-    <footer>
-        
-    </footer>
+</body>
 </html>
