--- a/Personal Webpage/Experience.htm
+++ b/Personal Webpage/Experience.htm
@@ -18,12 +18,23 @@
                 </ul>
             </div>
         </div>
-        <div class="title">
-            <h1>Adrian Meda Sanchez</h1>
-        </div>
+        <div class="titleA">
+            <h2>Experience</h2>
+            <div class="container">
+                <div class="box">
+                    <img src="bmw2.png" alt="Image 1">
+                    <p>BMW Loaner Manager</p>
+                </div>
+                <div class="box">
+                    <img src="truepill2.png" alt="Image 2">
+                    <p>Patient Experience Coordinator</p>
+                </div>
+            </div>
     </div>
-    </body>
-    <footer>
-        
+
+
+    <footer class="footer">
+        <div class="footer-content"></div>
     </footer>
+</body>
 </html>
