--- a/Personal Webpage/Portfolio.html
+++ b/Personal Webpage/Portfolio.html
@@ -18,12 +18,24 @@
                 </ul>
             </div>
         </div>
-        <div class="title">
-            <h1>Adrian Meda Sanchez</h1>
+        <div class="container2">
+            <div class="box2">
+                <img src="js.png" alt="Image 1">
+                <p>JS PROJECT</p>
+            </div>
+            <div class="box2">
+                <img src="html.png" alt="Image 2">
+                <p>HTML PROJECT</p>
+            </div>
+            <div class="box2">
+                <img src="css.png" alt="Image 3">
+                <p>CSS PROJECT</p>
+            </div>
+        </div>
+        <div class="link-container">
+            <a href="https://example.com" target="_blank">Click here for more information!</a>
+        </div>
         </div>
     </div>
-    </body>
-    <footer>
-        
-    </footer>
+</body>
 </html>
